--- a/DevicesMenagement/DevicesMenagement/docker-compose.yml
+++ b/DevicesMenagement/DevicesMenagement/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 
 services:
-    postgres-db:
+    device-database:
         image: postgres:14-alpine
         restart: 'no'
         environment:
@@ -9,7 +9,7 @@ services:
             POSTGRES_PASSWORD: testpassword
             POSTGRES_DB: devices_menagement
         volumes:
-          - postgres-db:/var/lib/postgresql
+          - device-database:/var/lib/postgresql
           #- ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
         ports:
           - 127.0.0.1:6000:5432
@@ -19,5 +19,24 @@ services:
             timeout: 1s
             retries: 3
 
+    local-auth-database:
+        image: postgres:14-alpine
+        restart: 'no'
+        environment:
+            POSTGRES_USER: devices_auth
+            POSTGRES_PASSWORD: testpassword_auth
+            POSTGRES_DB: devices_menagement_auth
+        volumes:
+          - local-auth-database:/var/lib/postgresql
+          #- ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
+        ports:
+          - 127.0.0.1:6001:5432
+        healthcheck:
+            test: ["CMD", "nc", "-z", "localhost:6001"]
+            interval: 3s
+            timeout: 1s
+            retries: 3
+
 volumes:
-    postgres-db:
+    device-database:
+    local-auth-database:
