restructured communication module to separate project, simplified interfaces

--- a/DevicesManagement/DevicesManagement/DevicesManagement.csproj
+++ b/DevicesManagement/DevicesManagement/DevicesManagement.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Communication\Communication.csproj" />
     <ProjectReference Include="..\Database\Database.csproj" />
   </ItemGroup>
 
