--- a/DevicesManagement/test/T_Database/T_Database.csproj
+++ b/DevicesManagement/test/T_Database/T_Database.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\..\Database\Database.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="SearchOptions\NewFolder\" />
+  </ItemGroup>
+
 </Project>
