--- a/DevicesManagement/DevicesManagement/DevicesManagement - Backup.csproj
+++ b/DevicesManagement/DevicesManagement/DevicesManagement - Backup.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -18,12 +19,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Communication\Communication.csproj" />
     <ProjectReference Include="..\Database\Database.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Validations\Devices\" />
-    <Folder Include="Validations\Commands\" />
-    <Folder Include="Validations\Users\" />
   </ItemGroup>
 
 </Project>
