--- a/DevicesManagement/DevicesManagement/Properties/launchSettings.json
+++ b/DevicesManagement/DevicesManagement/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "DevicesMenagement": {
+    "DevicesManagement": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
