--- a/DevicesManagement/test/T_DeviceManagement/T_DeviceManagement.csproj
+++ b/DevicesManagement/test/T_DeviceManagement/T_DeviceManagement.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DevicesManagement\DevicesManagement.csproj" />
+    <ProjectReference Include="..\..\DevicesManagement\DevicesManagement.csproj" />
   </ItemGroup>
 
 </Project>
