removed unused code, added configuring jwt token authentication

--- a/DevicesManagement/DevicesManagement/appsettings.json
+++ b/DevicesManagement/DevicesManagement/appsettings.json
@@ -12,5 +12,10 @@
         "Url": "http://localhost:5000"
       }
     }
+  },
+  "Jwt": {
+    "Secret": "1234abcd1234abcd",
+    "Issuer": "http://localhost:5000/api/authentication",
+    "Audience": "http://localhost:5000/api"
   }
 }
