finished providing jwt modules, finished setuping authenticaiton in startup, removed uneccessary classes in Authorization project, updated User model

--- a/DevicesManagement/DevicesManagement/appsettings.json
+++ b/DevicesManagement/DevicesManagement/appsettings.json
@@ -16,6 +16,8 @@
   "Jwt": {
     "Secret": "1234abcd1234abcd",
     "Issuer": "http://localhost:5000/api/authentication",
-    "Audience": "http://localhost:5000/api"
+    "Audience": "http://localhost:5000/api",
+    "Expiration": 18000000,
+    "Algorithm": "HS256"
   }
 }
