--- a/DevicesManagement/DevicesManagement/appsettings.json
+++ b/DevicesManagement/DevicesManagement/appsettings.json
@@ -19,5 +19,9 @@
     "Audience": "http://localhost:5000/api",
     "Expiration": 18000000,
     "Algorithm": "HS256"
+  },
+  "ConnectionStrings": {
+    "DeviceManagement": "Host=127.0.0.1:6000;Database=devices_menagement;Username=devices;Password=testpassword",
+    "Authentication": "Host=127.0.0.1:6001;Database=devices_menagement_auth;Username=devices_auth;Password=testpassword_auth"
   }
 }
