--- a/DevicesManagement/test/IntegrationTests/IntegrationTests.csproj
+++ b/DevicesManagement/test/IntegrationTests/IntegrationTests.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Authentication\Authentication.csproj" />
     <ProjectReference Include="..\..\Database\Database.csproj" />
     <ProjectReference Include="..\..\DevicesManagement\DevicesManagement.csproj" />
   </ItemGroup>
