--- a/DevicesManagement/DevicesManagement/DevicesManagement.csproj
+++ b/DevicesManagement/DevicesManagement/DevicesManagement.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.4.0" />
+    <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="MediatR" Version="11.1.0" />
     <PackageReference Include="MediatR.Extensions.AttributedBehaviors" Version="2.0.0" />
