added build scripts

--- a/DevicesManagement/DevicesManagement/appsettings.json
+++ b/DevicesManagement/DevicesManagement/appsettings.json
@@ -9,7 +9,7 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:5000"
+        "Url": "http://*:5000"
       }
     }
   },
@@ -21,7 +21,7 @@
     "Algorithm": "HS256"
   },
   "ConnectionStrings": {
-    "DeviceManagement": "Host=127.0.0.1:6000;Database=devices_menagement;Username=devices;Password=testpassword",
-    "Authentication": "Host=127.0.0.1:6001;Database=devices_menagement_auth;Username=devices_auth;Password=testpassword_auth"
+    "DeviceManagement": "Username=devices;Password=testpassword;Server=device-database;Database=db",
+    "Authentication": "Username=devices_auth;Password=testpassword_auth;Server=local-auth-database;Database=devices_menagement_auth"
   }
 }
