--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
 version: '3.3'
 
 services:
-    device-database:
+    device_db:
         image: postgres:14-alpine
-        restart: 'no'
+        restart: unless-stopped
+        container_name: device_db
+        hostname: device_db
+        networks:
+          - xyz
         environment:
             POSTGRES_USER: devices
             POSTGRES_PASSWORD: testpassword
             POSTGRES_DB: devices_menagement
         volumes:
-          - device-database:/var/lib/postgresql
+          - device_db:/var/lib/postgresql
           #- ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
         ports:
           - 127.0.0.1:6000:5432
@@ -19,15 +23,19 @@ services:
             timeout: 1s
             retries: 3
 
-    local-auth-database:
+    auth_db:
         image: postgres:14-alpine
-        restart: 'no'
+        restart: unless-stopped
+        hostname: auth_db
+        container_name: auth_db
+        networks:
+          - xyz
         environment:
             POSTGRES_USER: devices_auth
             POSTGRES_PASSWORD: testpassword_auth
             POSTGRES_DB: devices_menagement_auth
         volumes:
-          - local-auth-database:/var/lib/postgresql
+          - auth_db:/var/lib/postgresql
           #- ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
         ports:
           - 127.0.0.1:6001:5432
@@ -37,6 +45,25 @@ services:
             timeout: 1s
             retries: 3
 
+    api:
+        build: .
+        container_name: api
+        restart: unless-stopped
+        networks:
+          - xyz
+        # depends_on:
+        #     device_db:
+        #         condition: service_healthy
+        #     auth_db:
+        #         condition: service_healthy
+        ports: 
+            - "5000:5000"
+        expose: 
+            - 5000
+
+networks:
+  xyz:
+
 volumes:
-    device-database:
-    local-auth-database:
+    device_db:
+    auth_db:
