--- a/DevicesManagement/DevicesManagement/appsettings.Docker.json
+++ b/DevicesManagement/DevicesManagement/appsettings.Docker.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DevicesDb": "Username=devices;Password=testpassword;Server=device_db;Database=db",
-    "AuthDb ": "Username=devices_auth;Password=testpassword_auth;auth_db;Database=devices_menagement_auth"
+    "DevicesDb": "Username=devices;Password=testpassword;Server=device_db;Database=devices_menagement",
+    "AuthDb": "Username=devices_auth;Password=testpassword_auth;Server=auth_db;Database=devices_menagement_auth"
   },
   "FirstStartup": true
 }
