--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
-FIRST_START=true
+DEVICES_POSTGRES_USER=devices
+DEVICES_POSTGRES_PASSWORD=testpassword
+DEVICES_POSTGRES_DB=devices_menagement
+DEVICES_POSTGRES_PORT=6000
+
+AUTH_POSTGRES_USER=devices_auth
+AUTH_POSTGRES_PASSWORD=testpassword_auth
+AUTH_POSTGRES_DB=devices_menagement_auth
+AUTH_POSTGRES_PORT=6001
+
+API_ADMIN_PASSWORD=testPWD123
+API_ADMIN_EMPLOYEE_ID=aaaa12345678
+API_PORT=5000
