--- a/DevicesManagement/DevicesManagement/appsettings.Docker.json
+++ b/DevicesManagement/DevicesManagement/appsettings.Docker.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DevicesDb": "Username=devices;Password=testpassword;Server=device_db;Database=devices_menagement",
-    "AuthDb": "Username=devices_auth;Password=testpassword_auth;Server=auth_db;Database=devices_menagement_auth"
-  },
-  "FirstStartup": true
+    "DevicesDb": "Username=devices;Password=testpassword;Host=localhost:6000;Database=devices_menagement",
+    "AuthDb": "Username=devices_auth;Password=testpassword_auth;Host=localhost:6001;Database=devices_menagement_auth"
+  }
 }
